# WorkshopLG_3_duckdb_dbt

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  main.py  pyproject.toml
sql/: exemplo_01.sql  exemplo_02.sql  exemplo_03.sql  exemplo_06.py
