[tool.poetry]
name = "workshop parte 2 - duckdb - dbt"
version = "0.1.0"
description = "Workshop 3 - parte 2 - Luciano galvão"
authors = ["keitaro"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
duckdb = "^0.9.2"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
